<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kevinadesara.opencvsamples.object_detect.ObjectDetectActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/sbHueMin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <org.opencv.android.JavaCameraView
            android:id="@+id/java_camera_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            app:camera_id="any"
            app:show_fps="false" />

    </FrameLayout>

    <!--Hue Min -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblHueMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hue_min"
        app:layout_constraintBottom_toBottomOf="@+id/sbHueMin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbHueMin"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sbHueMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/sbHueMax"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/sbHueMax"
        app:layout_constraintRight_toLeftOf="@+id/lblHueMinProgress" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblHueMinProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@id/sbHueMin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sbHueMin"
        app:layout_constraintVertical_bias="0"
        tools:text="0" />

    <!--Hue Max -->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblHueMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hue_max"
        app:layout_constraintBottom_toBottomOf="@+id/sbHueMax"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbHueMax"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sbHueMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/sbSatMin"
        app:layout_constraintLeft_toLeftOf="@+id/sbSatMin"
        app:layout_constraintRight_toLeftOf="@+id/lblHueMaxProgress" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblHueMaxProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@id/sbHueMax"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sbHueMax"
        app:layout_constraintVertical_bias="0"
        tools:text="0" />

    <!--Sat Min -->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblSatMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sat_min"
        app:layout_constraintBottom_toTopOf="@+id/lblSatMax"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbSatMin"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sbSatMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/sbSatMax"
        app:layout_constraintLeft_toLeftOf="@+id/sbSatMax"
        app:layout_constraintRight_toLeftOf="@+id/lblSatMinProgress" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblSatMinProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@id/sbSatMin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sbSatMin"
        app:layout_constraintVertical_bias="0"
        tools:text="0" />

    <!--Sat Max -->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblSatMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sat_max"
        app:layout_constraintBottom_toBottomOf="@+id/sbSatMax"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sbSatMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/sbValueMin"
        app:layout_constraintLeft_toLeftOf="@+id/sbValueMin"
        app:layout_constraintRight_toLeftOf="@+id/lblSatMaxProgress" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblSatMaxProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@id/sbSatMax"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sbSatMax"
        app:layout_constraintVertical_bias="0"
        tools:text="0" />

    <!--Val Min -->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblValueMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/val_min"
        app:layout_constraintBottom_toTopOf="@+id/lblValueMax"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbValueMin"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sbValueMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/sbValueMax"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toRightOf="@+id/lblValueMax"
        app:layout_constraintRight_toLeftOf="@+id/lblValueMinProgress" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblValueMinProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/sbValueMin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbValueMin"
        app:layout_constraintVertical_bias="0"
        tools:text="0" />

    <!--Val Max-->


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblValueMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/val_max"
        app:layout_constraintBottom_toBottomOf="@+id/sbValueMax"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbValueMax"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sbValueMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toRightOf="@+id/lblValueMax"
        app:layout_constraintRight_toLeftOf="@+id/lblValueMaxProgress" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblValueMaxProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/sbValueMax"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbValueMax"
        app:layout_constraintVertical_bias="0"
        tools:text="0" />


</android.support.constraint.ConstraintLayout>
